<resources>
    <string name="app_name">MunchifySeller</string>

    <string name="ok">Ok</string>
    <!-- Strings related to login -->
    <string name="login_message">Logging in</string>
    <string name="prompt_wait">Please wait…</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_posting">NewPostingActivity</string>

    <!-- New Food Posting -->
    <string name="new_posting">New Posting</string>
    <string name="posting_title">Posting Title</string>
    <string name="hint_description">Description (optional)</string>
    <string name="old_price">Old Price</string>
    <string name="new_price">New Price</string>
    <string name="create_posting">Upload Posting</string>
    <string name="preview_image">Image Preview</string>
    <string name="camera_permission_not_granted">Camera permission was not granted.</string>
</resources>
